# Converse

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
converse/: __init__.py  cli.py  executor.py  llm.py  models.py  prompt.py  setup_wizard.py  translator.py
tests/: conftest.py  test_cli.py  test_executor.py  test_llm.py  test_models.py  test_setup_wizard.py  test_translator.py
